fix responsive layout issues

--- a/MarkUp/styles.css
+++ b/MarkUp/styles.css
@@ -301,6 +301,10 @@ header .search {
   z-index: 999;
   transition: 0.3s ease-in-out;
 }
+.navigation-menu .item .chairs-menu.last {
+  left: auto;
+  right: 0;
+}
 .navigation-menu .item .chairs-menu .types {
   height: 400px;
   padding: 1rem;
@@ -393,7 +397,7 @@ header .search {
   right: -100%;
   transition: 0.5s;
   padding: 50px 0 0 50px;
-  z-index: 999;
+  z-index: 1111;
 }
 .burger-menu a {
   display: flex;
@@ -433,15 +437,15 @@ header .search {
   align-items: center;
   gap: 0;
   display: none;
-  position: absolute;
+  position: fixed;
   width: 70%;
   left: 50%;
-  top: 60%;
+  top: 50%;
   transform: translate(-50%, -50%);
   background-color: white;
   padding: 20px;
   border-radius: 10px;
-  z-index: 999;
+  z-index: 1000;
 }
 .search-modal img {
   width: 20px;
@@ -473,7 +477,7 @@ header .search {
   box-shadow: -1px 0px 20px 0px rgba(44, 40, 40, 0.129);
   position: fixed;
   bottom: 0;
-  z-index: 999;
+  z-index: 1000;
 }
 .user-menu_modal a {
   position: relative;
@@ -533,14 +537,12 @@ header .search {
 }
 .hero-page .hero-page_content .selector-2 .selector-modal-2 {
   bottom: 100%;
-  left: 50%;
 }
 .hero-page .hero-page_content .selector-3 {
   right: 5%;
   bottom: 20%;
 }
 .hero-page .hero-page_content .selector-3 .selector-modal-3 {
-  top: -50%;
   right: 100%;
 }
 .hero-page .hero-page_content .selector-1,
@@ -550,6 +552,7 @@ header .search {
   border-radius: 50%;
   width: 70px;
   height: 70px;
+  z-index: 999;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -1061,7 +1064,7 @@ header .search {
   flex-direction: row;
   justify-content: space-around;
   align-items: start;
-  gap: 5rem;
+  gap: 2rem;
 }
 .magazine-container .magazine-content div:last-child div {
   display: flex;
