--- a/MarkUp/styles/_header.scss
+++ b/MarkUp/styles/_header.scss
@@ -136,6 +136,11 @@ header {
       left: 0;
       z-index: 999;
       transition: 0.3s ease-in-out;
+      &.last {
+        left: auto;
+        right: 0;
+      }
+
       .types {
         height: 400px;
         padding: 1rem;
@@ -223,7 +228,7 @@ header {
   right: -100%;
   transition: 0.5s;
   padding: 50px 0 0 50px;
-  z-index: 999;
+  z-index: 1111;
 
   a {
     @include flex(flex, row, center, center, 0.5rem);
@@ -260,15 +265,15 @@ header {
 .search-modal {
   @include flex(flex, row, space-between, center, 0);
   display: none;
-  position: absolute;
+  position: fixed;
   width: 70%;
   left: 50%;
-  top: 60%;
+  top: 50%;
   transform: translate(-50%, -50%);
   background-color: $color-primary;
   padding: 20px;
   border-radius: 10px;
-  z-index: 999;
+  z-index: 1000;
 
   img {
     width: 20px;
@@ -305,10 +310,10 @@ header {
   box-shadow: -1px 0px 20px 0px rgba(44, 40, 40, 0.129);
   position: fixed;
   bottom: 0;
-  z-index: 999;
-  a{
+  z-index: 1000;
+  a {
     position: relative;
-    div{
+    div {
       position: absolute;
       width: 20px;
       height: 20px;
